--- a/src/component/Policy/policy.css
+++ b/src/component/Policy/policy.css
@@ -53,24 +53,27 @@ font-weight: 600;
 .policy-main-card p {
 	text-align: center;
 	font-weight: 600;
-	font-size: 1.24vw;
+	font-size: 20px;
 	margin-top: 5px;
 	margin-bottom: 20px;
+	padding-top: 10px;
 	color: aliceblue;
 }
 .policy-main-card button {
 	border: 1px solid black;
 	width: 90%;
 	border: none;
-	font-size: 1.14vw;
+	font-size: 1.4vw;
 	background: none;
 	font-weight: 600;
 	text-align: end;
-	margin-top: 10px;
+	margin-top: 0px;
+	
 	color: aliceblue;
 	height: 80%;
 }
 .policy-main-card img {
+	margin: 9px;
 	width: 20px;
 	color: aliceblue;
 }
@@ -87,6 +90,8 @@ font-weight: 600;
 	
 	}
 	.policy-main-card button {
-		font-size: 12px;
+		font-size: 15px;
 	}
 }
+
+
